--- a/env.example
+++ b/env.example
@@ -2,6 +2,15 @@
 # For PostgreSQL (current Prisma schema)
 DATABASE_URL="postgresql://username:password@localhost:5432/صيدلية_store"
 
+# Direct database connection (for connection pooling)
+DIRECT_DATABASE_URL="postgresql://username:password@localhost:5432/صيدلية_store"
+
+# Database connection pool settings
+DATABASE_POOL_MIN=1
+DATABASE_POOL_MAX=10
+DATABASE_CONNECTION_TIMEOUT=30000
+DATABASE_ACQUIRE_TIMEOUT=30000
+
 # For MongoDB (alternative)
 # MONGODB_URI="mongodb://localhost:27017/صيدلية_store"
 
