--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^6.6.0",
+    "@prisma/client": "^6.15.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
@@ -68,7 +69,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "15.4.6",
     "postcss": "^8",
-    "prisma": "^6.5.0",
+    "prisma": "^6.15.0",
     "react-email": "^4.2.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
