--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "seed": "npx tsx ./lib/db/seed-prisma.ts",
+    "migrate-categories": "npx tsx ./scripts/migrate-categories.ts",
+    "update-category-sort": "npx tsx ./scripts/update-category-sort-orders.ts",
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
@@ -29,6 +31,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@react-email/components": "^0.5.0",
     "@types/bcryptjs": "^2.4.6",
