--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "migrate-categories": "npx tsx ./scripts/migrate-categories.ts",
     "update-category-sort": "npx tsx ./scripts/update-category-sort-orders.ts",
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "prisma generate --no-engine && next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
