--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.468.0",
-    "next": "^15.4.6",
+    "next": "15.4.10",
     "next-auth": "^5.0.0-beta.25",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
